name: helicopter-game
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: z.palmer@openmailbox.org
synopsis: A simple dodge the blocks helicopter game
description:
    Use enter to start the game, use W to fly, and use Q to quit once you have crashed.
category: Game
author: ZedPea
data-files:
    Assets/background.jpg
    Assets/block.jpg
    Assets/deadBG.jpg
    Assets/heli.png
    Assets/menuBG.jpg
    Fonts/arial.ttf

executable helicopter-game
    main-is: helicopter-game.hs
    build-depends:
        base >=4.9 && <4.10,
        sdl2 >=2.1.3 && <2.2,
        sdl2-ttf >=1.0.0 && <1.1,
        lens >=4.15.1 && <4.16,
        time >=1.6.0.1 && <1.7,
        sdl2-image >=2.0.0 && <2.1,
        random ==1.1.*
    default-language: Haskell2010
    other-extensions: TemplateHaskell OverloadedStrings BangPatterns
    hs-source-dirs: Src
    other-modules:
        Paths_helicopter_game
