name: helicopter-game
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: z.palmer@openmailbox.org
synopsis: A simple dodge the blocks helicopter game
category: Game
author: ZedPea
data-files: assets/heli.png, fonts/arial.ttf

executable helicopter-game
    main-is: Main.hs
    build-depends: base >=4.9 && <4.10, sdl2, sdl2-ttf, lens, time, sdl2-image,
                   random, text, vector, deepseq
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -threaded
    other-modules: Block, Collision, Constant, Init, Screen, State, Update,
                   Utilities, Paths_helicopter_game
